@@ -1,5 +1,51 @@
+<!-- Automagically generated by the ToDo program on Sat Jun 19 20:54:24 2004 -->
 <todo version="0.1.17">
-        <note priority="veryhigh" time="1036046748">
-            God help us.
-        </note>
+    <note priority="veryhigh" time="1036046748">
+        God help us.
+    </note>
+    <note priority="high" time="1087689758">
+        write code to output a WGFILE with a sane name
+    </note>
+    <note priority="high" time="1087689986">
+        get server supplied subscriptions to properly get added as chats
+    </note>
+    <note priority="high" time="1087691868">
+        zephyr freezes up sometimes (possibly when zlocating, and possibly when krb tickets have expired)? Debug and fix
+    </note>
+    <note priority="medium" time="1087689774">
+        get non-kerberized zephyr working for windows
+    </note>
+    <note priority="medium" time="1087689784">
+        get kerberized zephyr working for windows
+    </note>
+    <note priority="medium" time="1087689886">
+        get opener and closer tags for @ formatting to only match the correct closing tag, not any closing tag (e.g. [ matches ], and not )
+    </note>
+    <note priority="medium" time="1087689920">
+        use tzc as a backend
+    </note>
+    <note priority="medium" time="1087690034">
+        properly detect when subscriptions get lost
+    </note>
+    <note priority="medium" time="1087690121">
+        support zcrypt (maybe a plugin would be better?)
+    </note>
+    <note priority="medium" time="1087690133">
+        support /commands
+    </note>
+    <note priority="medium" time="1087692864">
+        look for more memory leaks
+    </note>
+    <note priority="low" time="1087690041">
+        support multiple zephyr accounts (depends on "use tzc as a backend")
+    </note>
+    <note priority="low" time="1087691895">
+        import chats into blist.xml and autojoin on startup?
+    </note>
+    <note priority="verylow" time="1087690240">
+        support gpg
+    </note>
+    <note priority="verylow" time="1087690286">
+        support kzwrite
+    </note>
 </todo>
